# podcast-intelligence

./: .cursorrules  .gitignore  BUGFIX_403_ERRORS.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_READY.md  DEPLOY_NOW.md  DEPLOY_QUICKSTART.md  DESIGN_OPTIONS.md  DESIGN_SYSTEM.md  DEVELOPMENT.md  Dockerfile  ERROR_HANDLING_UX.md  GETTING_STARTED.md  LICENSE  PAGINATION_FEATURE.md  PAID_TIER_OPTIMIZATIONS.md  PERFORMANCE_OPTIMIZATIONS.md  PROGRESS.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  RATE_LIMIT_FIX.md  README.md  RSS_GUIDANCE_FOR_USERS.md  START_HERE.md  SUBSTACK_403_ISSUE.md  UI_UPGRADE_SUMMARY.md  USER_FRIENDLY_ERRORS.md  WEB_APP_README.md  deploy-prep.sh  docker-compose.yml  feeds.json  nixpacks.toml  podcast  podcast.sh  pyproject.toml  railway.toml  setup.sh  start.sh
backend/: Dockerfile  Procfile  add_indexes.py  config.py  database.py  main.py  models.py  nixpacks.toml  railway.toml  render.yaml  requirements.txt
backend/services/: __init__.py  groq_service.py
backend/utils/: __init__.py  error_formatter.py
frontend/: index.html  package-lock.json  package.json  railway.toml  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/api/: client.js
frontend/src/components/: Button.jsx  EmailCaptureModal.jsx  EpisodeCard.jsx  Pagination.jsx  README.md  StatusBadge.jsx
frontend/src/hooks/: README.md  usePolling.js
scripts/: download_and_transcribe.py  list_episodes.py  resummarize.py  test_transcription.py
src/podcast_intelligence/: __init__.py  downloader.py  rss_parser.py  storage.py  summarizer.py  transcriber.py
(+7 files in other folders)
