[project]
name = "podcast-intelligence"
version = "0.1.0"
description = "Local podcast transcription and summarization"
requires-python = ">=3.11"
dependencies = [
    "mlx-whisper>=0.4.0",
    "numpy>=1.26.0",
    "rich>=13.0.0",
    "feedparser>=6.0.0",
    "httpx>=0.27.0",
    "click>=8.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "ipython>=8.0.0",
]



